--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,23 @@ repositories {
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     implementation 'org.testng:testng:7.1.0'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
 }
 
-test{
+task testRegr(type:Test){
     useTestNG()
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
+}
+
+task testUser(type:Test){
+    useTestNG{
+        suites 'src/test/resources/testing-UserRegistration.xml'
+    }
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
+
+
 }
